Move MPU9250 SPI into MPU9250.c and config MPU and scatter

--- a/MDK-ARM/01-GPIO_W25Qxx/01-GPIO_W25Qxx.build_log.htm
+++ b/MDK-ARM/01-GPIO_W25Qxx/01-GPIO_W25Qxx.build_log.htm
@@ -22,47 +22,19 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\MDKCODE\MDKCODE_H7\SPI_DMA\SPIMY\MDK-ARM\01-GPIO.uvprojx
-Project File Date:  11/21/2022
+Project File Date:  11/22/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target '01-GPIO_W25Qxx'
 compiling main.c...
-compiling stm32h7xx_hal_msp.c...
-compiling rng.c...
-compiling stm32h7xx_it.c...
-compiling gpio.c...
-compiling spi.c...
-compiling timer.c...
-compiling dma.c...
-compiling stm32h7xx_hal_rng_ex.c...
-compiling stm32h7xx_hal_rng.c...
-compiling stm32h7xx_hal_cortex.c...
-compiling stm32h7xx_hal_rcc.c...
-compiling stm32h7xx_hal_flash.c...
-compiling stm32h7xx_hal_flash_ex.c...
-compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_rcc_ex.c...
-compiling stm32h7xx_hal_hsem.c...
-compiling stm32h7xx_hal_dma.c...
-compiling stm32h7xx_hal_pwr.c...
-compiling stm32h7xx_hal_dma_ex.c...
-compiling stm32h7xx_hal_mdma.c...
-compiling stm32h7xx_hal_pwr_ex.c...
-compiling stm32h7xx_hal.c...
-compiling stm32h7xx_hal_spi_ex.c...
-compiling stm32h7xx_hal_exti.c...
-compiling stm32h7xx_hal_i2c_ex.c...
-compiling stm32h7xx_hal_spi.c...
-compiling system_stm32h7xx.c...
-compiling MPU9250.c...
-compiling stm32h7xx_hal_tim.c...
-compiling stm32h7xx_hal_tim_ex.c...
-compiling stm32h7xx_hal_i2c.c...
 linking...
-Program Size: Code=12656 RO-data=712 RW-data=64 ZI-data=1448  
+.\01-GPIO_W25Qxx\01-GPIO_W25Qxx.sct(13): warning: L6312W: Empty Execution region description for region RW_DTCM
+.\01-GPIO_W25Qxx\01-GPIO_W25Qxx.sct(21): warning: L6312W: Empty Execution region description for region RW_ITCM
+Program Size: Code=15100 RO-data=752 RW-data=40 ZI-data=1448  
+Finished: 0 information, 2 warning and 0 error messages.
 FromELF: creating hex file...
-".\01-GPIO_W25Qxx\01-GPIO_W25Qxx.axf" - 0 Error(s), 0 Warning(s).
+".\01-GPIO_W25Qxx\01-GPIO_W25Qxx.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -85,7 +57,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
